--- a/teku-consensus.yml
+++ b/teku-consensus.yml
@@ -44,12 +44,14 @@ services:
       - --logging=${LOG_LEVEL}
       - --rest-api-host-allowlist=*
       - --rest-api-enabled=true
+      - --rest-api-interface=0.0.0.0
+      - --rest-api-port=5052
     command: ${TEKU_RAPID_SYNC}
     labels:
       - traefik.enable=true
       - traefik.http.routers.cc.entrypoints=websecure
       - traefik.http.routers.cc.rule=Host(`${CC_HOST}.${DOMAIN}`)
-      - traefik.http.services.cc.loadbalancer.server.port=5051
+      - traefik.http.services.cc.loadbalancer.server.port=5052
   eth:
     image: tianon/true
     restart: "no"
