Fix permissions bug with prysm-web

--- a/prysm-web.yml
+++ b/prysm-web.yml
@@ -3,7 +3,9 @@ services:
   validator:
     expose:
       - ${PRYSM_WEB_PORT}/tcp
+    user: root
     entrypoint:
+      - docker-entrypoint.sh
       - validator
       - --datadir
       - /var/lib/prysm
