--- a/lh-validator.yml
+++ b/lh-validator.yml
@@ -9,6 +9,12 @@ x-logging: &logging
 services:
   validator:
     restart: "${RESTART}"
+    build:
+      context: ./lighthouse
+      dockerfile: ${LH_DOCKERFILE}
+      args:
+        - BUILD_TARGET=${LH_SRC_BUILD_TARGET}
+        - DOCKER_TAG=${LH_DOCKER_TAG}
     image: lighthouse:local
     user: lhvalidator
     volumes:
