--- a/lodestar-validator.yml
+++ b/lodestar-validator.yml
@@ -7,7 +7,7 @@ x-logging: &logging
       max-file: "3"
 
 services:
-  consensus:
+  validator:
     restart: "${RESTART}"
     build:
       context: ./lodestar
@@ -15,46 +15,6 @@ services:
       args:
         - BUILD_TARGET=${LS_SRC_BUILD_TARGET}
         - DOCKER_TAG=${LS_DOCKER_TAG}
-    image: lodestar:local
-    user: lsconsensus
-    stop_grace_period: 1m
-    volumes:
-      - lsconsensus-data:/var/lib/lodestar/consensus
-      - /etc/timezone:/etc/timezone:ro
-      - /etc/localtime:/etc/localtime:ro
-    ports:
-      - ${LS_PORT}:${LS_PORT}/tcp
-      - ${LS_PORT}:${LS_PORT}/udp
-    expose:
-      - 5052/tcp
-    <<: *logging
-    entrypoint:
-      - node
-      - --max-old-space-size=6144
-      - /usr/app/node_modules/.bin/lodestar
-      - beacon
-      - --rootDir
-      - /var/lib/lodestar/consensus
-      - --api.rest.enabled
-      - "true"
-      - --api.rest.host
-      - 0.0.0.0
-      - --api.rest.port
-      - "5052"
-      - --network.discv5.bindAddr
-      - "/ip4/0.0.0.0/udp/${LS_PORT}"
-      - --network.localMultiaddrs
-      - "/ip4/0.0.0.0/tcp/${LS_PORT}"
-      - --eth1.providerUrl
-      - ${EC_NODE}
-      - --weakSubjectivitySyncLatest
-      - ${LS_RAPID_SYNC}
-      - --logLevel
-      - ${LOG_LEVEL}
-      - --network
-      - ${NETWORK}
-  validator:
-    restart: "${RESTART}"
     image: lodestar:local
     user: lsvalidator
     volumes:
@@ -70,7 +30,7 @@ services:
       - --rootDir
       - /var/lib/lodestar/validators
       - --server
-      - http://consensus:5052
+      - ${CC_NODE}
       - --graffiti
       - ${GRAFFITI}
       - --logLevel
@@ -118,7 +78,7 @@ services:
       - --rootDir
       - /var/lib/lodestar/validators
       - --server
-      - http://consensus:5052
+      - ${CC_NODE}
       -  --logLevel
       - ${LOG_LEVEL}
       - --network
@@ -145,8 +105,6 @@ services:
     image: tianon/true
     restart: "no"
     depends_on:
-      - consensus
       - validator
 volumes:
-  lsconsensus-data:
   lsvalidator-data:
