--- a/nimbus-consensus.yml
+++ b/nimbus-consensus.yml
@@ -48,6 +48,7 @@ services:
       - --subscribe-all-subnets
       - --enr-auto-update=true
       - --num-threads=0
+    command: ${NIMBUS_RAPID_SYNC}
     labels:
       - traefik.enable=true
       - traefik.http.routers.cc.service=cc
