--- a/default.env
+++ b/default.env
@@ -38,7 +38,7 @@ CC_LB=cc-lb
 DDNS_SUBDOMAIN=
 DDNS_PROXY=true
 
-# Teku/Lighthouse/Lodestar rapid sync via initial state/checkpoint. For Teku or Lighthouse, please create an Infura
+# Teku/Lighthouse/Nimbus/Lodestar rapid sync via initial state/checkpoint. For Teku, Lighthouse or Nimbus, please create an Infura
 # eth2/beacon project first, then replace the {projectid} and {secret} here and use one of these lines instead of the empty one
 #TEKU_RAPID_SYNC=--initial-state=https://{projectid}:{secret}@eth2-beacon-${NETWORK}.infura.io/eth/v1/debug/beacon/states/finalized
 #LH_RAPID_SYNC=--checkpoint-sync-url=https://{projectid}:{secret}@eth2-beacon-${NETWORK}.infura.io/
