--- a/erigon.yml
+++ b/erigon.yml
@@ -65,6 +65,8 @@ services:
       - /var/lib/erigon
       - --private.api.addr
       - erigon:9090
+      - --txpool.api.addr
+      - erigon:9090
       - --http.addr
       - 0.0.0.0
       - --http.vhosts=*
