Start removal of wildcards

--- a/ec-traefik.yml
+++ b/ec-traefik.yml
@@ -7,16 +7,20 @@ services:
       - traefik.http.routers.ec.service=ec
       - traefik.http.routers.ec.entrypoints=websecure
       - traefik.http.routers.ec.rule=Host(`${EC_HOST}.${DOMAIN}`)
+      - traefik.http.routers.ec.tls.certresolver=letsencrypt
       - traefik.http.routers.eclb.service=ec
       - traefik.http.routers.eclb.entrypoints=websecure
       - traefik.http.routers.eclb.rule=Host(`${EC_LB}.${DOMAIN}`)
+      - traefik.http.routers.eclb.tls.certresolver=letsencrypt
       - traefik.http.services.ec.loadbalancer.server.port=${EC_RPC_PORT}
       - traefik.http.routers.ecws.service=ecws
       - traefik.http.routers.ecws.entrypoints=websecure
       - traefik.http.routers.ecws.rule=Host(`${EC_WS_HOST}.${DOMAIN}`)
+      - traefik.http.routers.ecws.tls.certresolver=letsencrypt
       - traefik.http.routers.ecwslb.service=ecws
       - traefik.http.routers.ecwslb.entrypoints=websecure
       - traefik.http.routers.ecwslb.rule=Host(`${EC_WS_LB}.${DOMAIN}`)
+      - traefik.http.routers.ecwslb.tls.certresolver=letsencrypt
       - traefik.http.services.ecws.loadbalancer.server.port=${EC_WS_PORT}
 
   eth:
