--- a/traefik-cf.yml
+++ b/traefik-cf.yml
@@ -12,6 +12,10 @@ services:
     restart: ${RESTART}
     command:
 #      - --log.level=DEBUG
+#      - --accesslog=true
+#      - --accesslog.format=json
+#      - --accesslog.fields.defaultmode=keep
+#      - --accesslog.fields.headers.defaultmode=keep
 #      - --certificatesResolvers.letsencrypt.acme.caServer=https://acme-staging-v02.api.letsencrypt.org/directory
       - --providers.docker=true
       - --providers.docker.exposedbydefault=false
@@ -23,10 +27,6 @@ services:
       - --entrypoints.web.http.redirections.entrypoint.to=websecure
       - --entrypoints.web.http.redirections.entrypoint.scheme=https
       - --entrypoints.websecure.address=:${TRAEFIK_WEB_PORT}
-      - --entrypoints.websecure.http.tls=true
-      - --entrypoints.websecure.http.tls.certResolver=letsencrypt
-      - --entrypoints.websecure.http.tls.domains[0].main=${DOMAIN}
-      - --entrypoints.websecure.http.tls.domains[0].sans=*.${DOMAIN}
     ports:
       - ${TRAEFIK_WEB_PORT}:${TRAEFIK_WEB_PORT}/tcp
       - ${TRAEFIK_WEB_HTTP_PORT}:${TRAEFIK_WEB_HTTP_PORT}/tcp
