--- a/prysm-web.yml
+++ b/prysm-web.yml
@@ -33,4 +33,5 @@ services:
       - traefik.enable=true
       - traefik.http.routers.prysm.entrypoints=web,websecure
       - traefik.http.routers.prysm.rule=Host(`${PRYSM_HOST}.${DOMAIN}`)
+      - traefik.http.routers.prysm.tls.certresolver=letsencrypt
       - traefik.http.services.prysm.loadbalancer.server.port=${PRYSM_WEB_PORT}
