--- a/prysm-consensus.yml
+++ b/prysm-consensus.yml
@@ -80,6 +80,7 @@ services:
       - traefik.http.routers.cc.entrypoints=websecure
       - traefik.http.routers.cc.rule=Host(`${CC_HOST}.${DOMAIN}`)
       - traefik.http.routers.cc.service=cc
+      - traefik.http.routers.cc.tls.certresolver=letsencrypt
       - traefik.http.services.cc.loadbalancer.server.port=5052
   traefik-certs-dumper:
     image: ldez/traefik-certs-dumper:latest
