--- a/erigon-grafana.yml
+++ b/erigon-grafana.yml
@@ -1,12 +1,2 @@
-# Not standalone, relies on one of the {client}-grafana.yml files or
-# blank-grafana.yml
+# Empty, for backwards compatibility
 version: "3.4"
-services:
-  erigon:
-    expose:
-      - 6060/tcp
-    #command: --metrics --metrics.addr=0.0.0.0 --metrics.expensive --pprof --pprof.addr=0.0.0.0 --pprof.port=6061
-    command: --metrics --metrics.addr=0.0.0.0 --metrics.expensive
-  prometheus:
-    depends_on:
-      - erigon
