--- a/lh-consensus.yml
+++ b/lh-consensus.yml
@@ -27,6 +27,7 @@ services:
       - ${LH_PORT}:${LH_PORT}/udp
     expose:
       - 5052/tcp
+      - 5054/tcp
     networks:
       default:
         aliases:
@@ -54,6 +55,10 @@ services:
       - --eth1-blocks-per-log-query
       - "150"
       - --debug-level=${LOG_LEVEL}
+      - --metrics
+      - --metrics-address
+      - 0.0.0.0
+      - --validator-monitor-auto
     command: ${LH_RAPID_SYNC}
     labels:
       - traefik.enable=true
