--- a/prysm-base.yml
+++ b/prysm-base.yml
@@ -30,8 +30,9 @@ services:
       - ${PRYSM_PORT}:${PRYSM_PORT}/tcp
       - ${PRYSM_UDP_PORT}:${PRYSM_UDP_PORT}/udp
     expose:
-      - 5052
-      - 4000
+      - 5052/tcp
+      - 4000/tcp
+      - 8080/tcp
     networks:
       default:
         aliases:
@@ -66,6 +67,8 @@ services:
       - ${LOG_LEVEL}
       - --${NETWORK}
       - --accept-terms-of-use
+      - --monitoring-host
+      - 0.0.0.0
   validator:
     restart: "${RESTART}"
     build:
@@ -73,6 +76,8 @@ services:
       <<: *prysm-build
     image: prysm-validator:local
     user: prysmvalidator
+    expose:
+      - 8081/tcp
     volumes:
       - prysmvalidator-data:/var/lib/prysm
       - /etc/timezone:/etc/timezone:ro
@@ -95,6 +100,8 @@ services:
       # If you chose not to store the wallet password during import, comment out the two following lines
       - --wallet-password-file
       - /var/lib/prysm/password.txt
+      - --monitoring-host
+      - 0.0.0.0
     depends_on:
       - consensus
   validator-account-list:
