--- a/geth-grafana.yml
+++ b/geth-grafana.yml
@@ -1,11 +1,2 @@
-# Not standalone, relies on one of the {client}-grafana.yml files or
-# blank-grafana.yml
+# Empty, for backwards compatibility
 version: "3.4"
-services:
-  execution:
-    expose:
-      - 6060/tcp
-    command: --metrics --metrics.expensive --pprof --pprof.addr=0.0.0.0 ${GETH_CACHE}
-  prometheus:
-    depends_on:
-      - execution
