--- a/nimbus-consensus.yml
+++ b/nimbus-consensus.yml
@@ -22,6 +22,8 @@ services:
       - nimbus-consensus-data:/var/lib/nimbus
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
+    expose:
+      - 8008/tcp
     ports:
       - ${NIM_PORT}:${NIM_PORT}/tcp
       - ${NIM_PORT}:${NIM_PORT}/udp
@@ -48,6 +50,9 @@ services:
       - --enr-auto-update=true
       - --num-threads=0
       - --doppelganger-detection=false
+      - --metrics
+      - --metrics-port=8008
+      - --metrics-address=0.0.0.0
     command: ${NIMBUS_RAPID_SYNC}
     labels:
       - traefik.enable=true
