--- a/prometheus/Dockerfile
+++ b/prometheus/Dockerfile
@@ -1,11 +1,6 @@
 FROM prom/prometheus
 
-COPY ./lh-prom.yml /etc/prometheus
-COPY ./prysm-prom.yml /etc/prometheus
-COPY ./nimbus-prom.yml /etc/prometheus
-COPY ./teku-prom.yml /etc/prometheus
-COPY ./geth-prom.yml /etc/prometheus
-COPY ./erigon-prom.yml /etc/prometheus
+COPY ./*-prom.yml /etc/prometheus/
 COPY ./none.yml /etc/prometheus
 COPY ./choose-config.sh /usr/local/bin/choose-config.sh
 
