--- a/prysm-grafana.yml
+++ b/prysm-grafana.yml
@@ -1,133 +1,1 @@
-version: "3.4"
-x-logging: &logging
-  logging:
-    driver: json-file
-    options:
-      max-size: 10m
-      max-file: "3"
-
-services:
-  consensus:
-    expose:
-      - 8080/tcp
-    command:
-      - --monitoring-host
-      - 0.0.0.0
-  validator:
-    expose:
-      - 8081/tcp
-    command:
-      - --monitoring-host
-      - 0.0.0.0
-  prometheus:
-    restart: "${RESTART}"
-    build:
-      context: ./prometheus
-    image: prometheus:local
-    volumes:
-      - prom-data:/prometheus
-      - ./prometheus/alert_rules.yml:/etc/prometheus/alert_rules.yml
-      - /etc/timezone:/etc/timezone:ro
-      - /etc/localtime:/etc/localtime:ro
-    environment:
-      - CLIENT=${COMPOSE_FILE}
-    expose:
-      - 9090/tcp
-    entrypoint: choose-config.sh
-    command: ["/bin/prometheus", "--storage.tsdb.path=/prometheus", "--web.console.libraries=/usr/share/prometheus/console_libraries", "--web.console.templates=/usr/share/prometheus/consoles"]
-    <<: *logging
-    depends_on:
-      - consensus
-      - validator
-      - node-exporter
-      - blackbox-exporter
-      - json-exporter
-      - cryptowat-exporter
-  node-exporter:
-    image: quay.io/prometheus/node-exporter:latest
-    command:
-      - '--path.rootfs=/host'
-      - '--path.procfs=/host/proc'
-      - '--path.sysfs=/host/sys'
-#      - '--collector.textfile.directory=/etc/node-exporter/'
-      - '--collector.filesystem.ignored-mount-points=${NODE_EXPORTER_IGNORE_MOUNT_REGEX}'
-      - '--no-collector.ipvs'
-    pid: host
-    restart: unless-stopped
-    volumes:
-      - '/:/host:ro,rslave'
-      - /etc/hostname:/etc/nodename:ro
-      - /proc:/host/proc:ro
-      - /sys:/host/sys:ro
-      - /etc/localtime:/etc/localtime:ro
-      - /etc/timezone:/etc/TZ:ro
-    expose:
-      - 9100/tcp
-    <<: *logging
-  blackbox-exporter:
-    restart: "${RESTART}"
-    image: prom/blackbox-exporter:master
-    volumes:
-      - ./prometheus/blackbox.yml:/config/blackbox.yml
-      - /etc/timezone:/etc/timezone:ro
-      - /etc/localtime:/etc/localtime:ro
-    expose:
-      - 9115/tcp
-    <<: *logging
-    command:
-      - --config.file=/config/blackbox.yml
-  json-exporter:
-    restart: "${RESTART}"
-    image: quay.io/prometheuscommunity/json-exporter
-    volumes:
-      - ./prometheus/json.yml:/config/json.yml
-      - /etc/timezone:/etc/timezone:ro
-      - /etc/localtime:/etc/localtime:ro
-    expose:
-      - 7979/tcp
-    <<: *logging
-    command:
-      - --config.file
-      - /config/json.yml
-  cryptowat-exporter:
-    restart: "${RESTART}"
-    image: nbarrientos/cryptowat_exporter
-    volumes:
-      - /etc/timezone:/etc/timezone:ro
-      - /etc/localtime:/etc/localtime:ro
-    environment:
-      - CRYPTOWAT_EXCHANGES=kraken
-      - CRYPTOWAT_PAIRS=ethusd,ethchf
-      - CRYPTOWAT_CACHESECONDS=300
-      - TZ=Europe/Zurich
-    expose:
-      - 9745/tcp
-    <<: *logging
-  grafana:
-    restart: "${RESTART}"
-    build:
-      context: ./grafana
-    image: grafana:local
-    environment:
-      - GF_SERVER_HTTP_PORT=${GRAFANA_PORT}
-    volumes:
-      - grafana-data:/var/lib/grafana
-      - /etc/timezone:/etc/timezone:ro
-      - /etc/localtime:/etc/localtime:ro
-    depends_on:
-      - prometheus
-    expose:
-      - ${GRAFANA_PORT}/tcp
-    <<: *logging
-    labels:
-      - traefik.enable=true
-      - traefik.http.routers.grafana.entrypoints=web,websecure
-      - traefik.http.routers.grafana.rule=Host(`${GRAFANA_HOST}.${DOMAIN}`)
-      - traefik.http.routers.grafana.tls.certresolver=letsencrypt
-      - traefik.http.services.grafana.loadbalancer.server.port=${GRAFANA_PORT}
-  eth:
-    depends_on:
-      - grafana
-volumes:
-  grafana-data:
-  prom-data:
+grafana.yml
