--- a/teku-base-notz.yml
+++ b/teku-base-notz.yml
@@ -23,6 +23,8 @@ services:
       - teku-data:/var/lib/teku
     environment:
       - JAVA_OPTS=-XX:SoftMaxHeapSize=2g -Xmx4g
+    expose:
+      - 8008/tcp
     ports:
       - ${TEKU_PORT}:${TEKU_PORT}/tcp
       - ${TEKU_PORT}:${TEKU_PORT}/udp
@@ -48,6 +50,10 @@ services:
       - --rest-api-enabled=true
       - --rest-api-interface=0.0.0.0
       - --rest-api-port=5052
+      - --metrics-enabled=true
+      - --metrics-port=8008
+      - --metrics-interface=0.0.0.0
+      - --metrics-host-allowlist=*
     command: ${TEKU_RAPID_SYNC}
   validator-import:
     restart: "no"
