--- a/nimbus-consensus.yml
+++ b/nimbus-consensus.yml
@@ -36,6 +36,7 @@ services:
       - /usr/local/bin/nimbus_beacon_node
       - --data-dir=/var/lib/nimbus
       - --non-interactive
+      - --status-bar=false
       - --tcp-port=${NIM_PORT}
       - --udp-port=${NIM_PORT}
       - --max-peers=${NIM_PEER_COUNT}
@@ -53,6 +54,7 @@ services:
       - --metrics
       - --metrics-port=8008
       - --metrics-address=0.0.0.0
+      - --validator-monitor-totals
     command: ${NIMBUS_RAPID_SYNC}
     labels:
       - traefik.enable=true
