--- a/besu/Dockerfile.binary
+++ b/besu/Dockerfile.binary
@@ -1,15 +1,25 @@
 ARG DOCKER_TAG
 
-FROM hyperledger/besu:${DOCKER_TAG}
+#FROM hyperledger/besu:${DOCKER_TAG}
+FROM suburbandad/besu:${DOCKER_TAG}
 
 # Unused but included to avoid warnings
 ARG BUILD_TARGET
 
-ARG UID=10001
-
 USER root
 
-RUN groupmod -g "${UID}" besu && usermod -u "${UID}" -g "${UID}" besu
+ARG USER=besu
+ARG UID=10001
+
+# See https://stackoverflow.com/a/55757473/12429735RUN
+RUN adduser \
+    --disabled-password \
+    --gecos "" \
+    --home "/nonexistent" \
+    --shell "/usr/sbin/nologin" \
+    --no-create-home \
+    --uid "${UID}" \
+    "${USER}"
 
 RUN set -eux; \
         apt-get update; \
