--- a/geth/Dockerfile.binary
+++ b/geth/Dockerfile.binary
@@ -1,6 +1,7 @@
 ARG DOCKER_TAG
 
-FROM ethereum/client-go:${DOCKER_TAG}
+#FROM ethereum/client-go:${DOCKER_TAG}
+FROM parithoshj/geth:${DOCKER_TAG}
 
 # Unused, this is here to avoid build time complaints
 ARG BUILD_TARGET
