--- a/nethermind/Dockerfile.binary
+++ b/nethermind/Dockerfile.binary
@@ -1,6 +1,7 @@
 ARG DOCKER_TAG
 
-FROM nethermind/nethermind:${DOCKER_TAG}
+#FROM nethermind/nethermind:${DOCKER_TAG}
+FROM nethermindeth/nethermind:${DOCKER_TAG}
 
 # Unused, this is here to avoid build time complaints
 ARG BUILD_TARGET
