--- a/nimbus-consensus.yml
+++ b/nimbus-consensus.yml
@@ -19,9 +19,9 @@ services:
     user: user
     stop_grace_period: 1m
     volumes:
-      - nimbus-consensus-data:/var/lib/nimbus
-      - /etc/timezone:/etc/timezone:ro
+      - nimbusconsensus-data:/var/lib/nimbus
       - /etc/localtime:/etc/localtime:ro
+      - ./${NETWORK}:/configs
     expose:
       - 8008/tcp
     ports:
@@ -40,10 +40,7 @@ services:
       - --tcp-port=${NIM_PORT}
       - --udp-port=${NIM_PORT}
       - --max-peers=${NIM_PEER_COUNT}
-      - --network=${NETWORK}
-      - --web3-url=${EC_NODE}
-      - --web3-url=${EC_FALLBACK_NODE1}
-      - --web3-url=${EC_FALLBACK_NODE2}
+      - --web3-url=${EL_NODE}
       - --log-level=${LOG_LEVEL}
       - --rest
       - --rest-address=0.0.0.0
@@ -55,18 +52,20 @@ services:
       - --metrics-port=8008
       - --metrics-address=0.0.0.0
       - --validator-monitor-totals
-    command: ${NIMBUS_RAPID_SYNC}
+      - --network=/configs
+      - --bootstrap-node=${ENR}
+      - --terminal-total-difficulty-override=${TOTAL_TERMINAL_DIFFICULTY}
     labels:
       - traefik.enable=true
-      - traefik.http.routers.cc.service=cc
-      - traefik.http.routers.cc.entrypoints=websecure
-      - traefik.http.routers.cc.rule=Host(`${CC_HOST}.${DOMAIN}`)
-      - traefik.http.routers.cc.tls.certresolver=letsencrypt
-      - traefik.http.services.cc.loadbalancer.server.port=5052
+      - traefik.http.routers.cl.service=cl
+      - traefik.http.routers.cl.entrypoints=websecure
+      - traefik.http.routers.cl.rule=Host(`${CL_HOST}.${DOMAIN}`)
+      - traefik.http.routers.cl.tls.certresolver=letsencrypt
+      - traefik.http.services.cl.loadbalancer.server.port=5052
   eth:
     image: tianon/true
     restart: "no"
     depends_on:
       - consensus
 volumes:
-  nimbus-consensus-data:
+  nimbusconsensus-data:
