Removed /etc/timezone throughout

--- a/teku-base-notz.yml
+++ b/teku-base-notz.yml
@@ -1,83 +1,1 @@
-# Version without timezone, for use with Amazon Linux 2 and similar
-version: "3.4"
-x-logging: &logging
-  logging:
-    driver: json-file
-    options:
-      max-size: 10m
-      max-file: "3"
-
-services:
-  consensus:
-    restart: "${RESTART}"
-    build:
-      context: ./teku
-      args:
-        - BUILD_TARGET=${TEKU_SRC_BUILD_TARGET}
-        - DOCKER_TAG=${TEKU_DOCKER_TAG}
-      dockerfile: ${TEKU_DOCKERFILE}
-    image: teku:local
-    user: teku
-    stop_grace_period: 1m
-    volumes:
-      - teku-data:/var/lib/teku
-    environment:
-      - JAVA_OPTS=-XX:SoftMaxHeapSize=2g -Xmx4g
-    expose:
-      - 8008/tcp
-    ports:
-      - ${TEKU_PORT}:${TEKU_PORT}/tcp
-      - ${TEKU_PORT}:${TEKU_PORT}/udp
-    networks:
-      default:
-        aliases:
-          - eth2
-    <<: *logging
-    entrypoint:
-      - /opt/teku/bin/teku
-      - --data-path=/var/lib/teku
-      - --log-destination=CONSOLE
-      - --network=${NETWORK}
-      - --eth1-endpoints=${EC_NODE}
-      - --eth1-deposit-contract-max-request-size=150
-      - --p2p-port=${TEKU_PORT}
-      - --p2p-peer-upper-bound=${TEKU_PEER_COUNT}
-      - --validators-keystore-locking-enabled=true
-      - --validator-keys=/var/lib/teku/validator-keys:/var/lib/teku/validator-passwords
-      - --validators-graffiti=${GRAFFITI}
-      - --logging=${LOG_LEVEL}
-      - --rest-api-host-allowlist=*
-      - --rest-api-enabled=true
-      - --rest-api-interface=0.0.0.0
-      - --rest-api-port=5052
-      - --metrics-enabled=true
-      - --metrics-port=8008
-      - --metrics-interface=0.0.0.0
-      - --metrics-host-allowlist=*
-    command: ${TEKU_RAPID_SYNC}
-  validator-import:
-    restart: "no"
-    image: teku:local
-    user: root
-    volumes:
-      - teku-data:/var/lib/teku
-      - ${DEPCLI_LOCALDIR}/validator_keys:/validator_keys
-    entrypoint: validator-import.sh
-  validator-exit:
-    restart: "no"
-    image: teku:local
-    user: teku
-    volumes:
-      - teku-data:/var/lib/teku
-    entrypoint:
-      - /opt/teku/bin/teku
-      - voluntary-exit
-      - --beacon-node-api-endpoint=http://consensus:5052
-      - --validator-keys=/var/lib/teku/validator-keys:/var/lib/teku/validator-passwords
-  eth:
-    image: tianon/true
-    restart: "no"
-    depends_on:
-      - consensus
-volumes:
-  teku-data:
+teku-base.yml
