--- a/lh-validator-notz.yml
+++ b/lh-validator-notz.yml
@@ -1,104 +1,1 @@
-# Version without timezone, for use with Amazon Linux 2 and similar
-version: "3.4"
-x-logging: &logging
-  logging:
-    driver: json-file
-    options:
-      max-size: 10m
-      max-file: "3"
-
-services:
-  validator:
-    restart: "${RESTART}"
-    build:
-      context: ./lighthouse
-      dockerfile: ${LH_DOCKERFILE}
-      args:
-        - BUILD_TARGET=${LH_SRC_BUILD_TARGET}
-        - DOCKER_TAG=${LH_DOCKER_TAG}
-    image: lighthouse:local
-    user: lhvalidator
-    expose:
-      - 5064/tcp
-    volumes:
-      - lhvalidator-data:/var/lib/lighthouse
-    <<: *logging
-    entrypoint:
-      - lighthouse
-      - vc
-      - --datadir
-      - /var/lib/lighthouse
-      - --beacon-nodes
-      - ${CC_NODE}
-      - --graffiti
-      - ${GRAFFITI}
-      - --network
-      - ${NETWORK}
-      - --debug-level=${LOG_LEVEL}
-      - --metrics
-      - --metrics-address
-      - 0.0.0.0
-  validator-import:
-    restart: "no"
-    image: lighthouse:local
-    user: root
-    volumes:
-      - lhvalidator-data:/var/lib/lighthouse
-      - ${DEPCLI_LOCALDIR}/validator_keys:/validator_keys
-    entrypoint:
-      - validator-import.sh
-      - lighthouse
-      - account
-      - validator
-      - import
-      - --datadir
-      - /var/lib/lighthouse
-      - --directory
-      - /val_keys
-      - --network
-      - ${NETWORK}
-      - --debug-level=${LOG_LEVEL}
-  validator-exit:
-    restart: "no"
-    image: lighthouse:local
-    user: root
-    volumes:
-      - lhvalidator-data:/var/lib/lighthouse
-      - ${DEPCLI_LOCALDIR}/validator_keys:/validator_keys
-    entrypoint:
-      - validator-exit.sh
-      - lighthouse
-      - account
-      - validator
-      - exit
-      - --beacon-node
-      - ${CC_NODE}
-      - --datadir
-      - /var/lib/lighthouse
-      - --network
-      - ${NETWORK}
-      - --debug-level=${LOG_LEVEL}
-      - --keystore
-  validator-account:
-    restart: "no"
-    image: lighthouse:local
-    user: lhvalidator
-    volumes:
-      - lhvalidator-data:/var/lib/lighthouse
-      - ${DEPCLI_LOCALDIR}:/interchange
-    entrypoint:
-      - lighthouse
-      - account
-      - validator
-      - --datadir
-      - /var/lib/lighthouse
-      - --network
-      - ${NETWORK}
-      - --debug-level=${LOG_LEVEL}
-  eth:
-    image: tianon/true
-    restart: "no"
-    depends_on:
-      - validator
-volumes:
-  lhvalidator-data:
+lh-validator.yml
